hidden the non "highlighted" projects for now

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
       <section class="portfolio" id="portfolio">
          <div class="container">
-            <h3 class="text-center text-uppercase text-secondary mb-0">Highlights</h3>
+            <h3 class="text-center text-uppercase text-secondary mb-0">Projects</h3>
             <hr class="star-light mb-5"> <br>
             <div class="row">
                <div class="col-md-6 col-lg-4">
@@ -133,7 +133,7 @@
             </div>
          </div>
          <br>
-         <div class="container">
+         <!--<div class="container">
             <h4 class="text-center text-uppercase text-secondary mb-0">More Projects</h4>
             <hr class="star-light mb-5"> <br>
             <div class="row">
@@ -185,8 +185,8 @@
                      <img class="img-fluid" src="img/portfolio/stickerpacks.jpg" alt="">
                   </a>
                </div>
-            </div>
-         </div>
+            </div>-->
+         </div>-->
       </section>
       <!-- About Section -->
       <section class="bg-secondary text-white mb-0" id="about">
