--- a/index.html
+++ b/index.html
@@ -400,6 +400,7 @@
                   <div class="col-lg-12 mx-auto">
                      <h4 class="text-secondary text-uppercase mb-0">Fright Light</h4>
                      <br>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/zKnx-4rx8Fc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                      <!--<hr class="star-dark mb-5">-->
                      <p class="mb-5">This is another game that was born out of an 8 hour long games jam at Neon Play. For this game I worked alongside an artist to both design and create the game</p>
                      <p class="mb-5">For us a big part of the project became about adding a lot of character to the player avatar (something rarely seen in the market) to reflect his current situation wether he be safe, sneaking or in danger. Working alongside an artist for this project throughout its life time, I feel was incredibly valuable as it was a constantly creative environment as we bounced ideas of each other throughout.</p>
