--- a/index.html
+++ b/index.html
@@ -311,18 +311,18 @@
                      <h4 class="text-secondary text-uppercase mb-0">Roller Splat</h4>
                      <!--<hr class="star-dark mb-5">-->
                      <p><img class="img-fluid" src="img/portfolio/rollersplat-icon.jpg"></p>
-                     <p class="mb-5" align="left">Every month or so at Neon Play we do a games jam where each person in the studio will spend 8 hours designing or developing a game idea or concept. For each of these games jams I always have a few ideas floating around in my head however, Roller Splat was a thought that popped into my head during the last 10 minutes of my bus Ride into work.<br>From that small little spark the game has grown completley past all expectations that I or anyone else at the studio had for the game. I don't think the 30 million downloads and being number one in over 70 countries will ever truly sink in! 
+                     <p class="mb-5" align="left">Every month or so at Neon Play we do a games jam where each person in the studio will spend 8 hours designing or developing a game idea or concept. For each of these games jams I always have a few ideas floating around in my head however, Roller Splat was a thought that popped into my head during the last 10 minutes of my bus Ride into work.<br>From that small little spark the game has grown completely past all expectations that I or anyone else at the studio had for the game. I don't think the 30 million downloads and being number one in over 70 countries will ever truly sink in! 
                      </p>
                      <p>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/ZXl-nyVt980" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                      </p>
                      <p class="mb-5" align="left">
                         After just a few days I was able to polish the game up and it was soft launched on the iOS app store and from there the incremental updates along the way really pushed it to the point where Voodoo chose to publish the game.
-                        Beacuse I was at university part time and the momentum needed to keep Roller Splat going was growing, the project was handed over to another developer at Neon Play and from here I was able to cleary see a lot of the mistakes I had made and what I could of done differently to really help improve the project. For example a lot of the code used was still quite hacky from the original games-jam and whilst making levels wasn't to clunky, the current system we have is far superior to what I originally developed.
+                        Because I was studying at university part time and the momentum needed to keep Roller Splat going was growing, the project was handed over to another developer at Neon Play and from here I was able to clearly see a lot of the mistakes I had made and what I could of done differently to really help improve the project. For example a lot of the code used was still quite hacky from the original games-jam and whilst making levels wasn't too clunky, the current system we have is far superior to what I originally developed.
                      </p>
                      <p><img class="img-fluid" src="img/portfolio/rollersplat-levels.jpg"></p>
                      <p class="mb-5" align="left">
-                        I have been creating hyper-casual games for over a year and Roller Splat was a project where I felt like I was able to combine all that I had learned both about designing and developing these games. With this project I felt like I was able to truly innovate in the hyper-casual market. Even staff at Voodoo admitted they never expected a hyper-casual / puzzle game could work!
+                        I have been creating hyper-casual games for over a year and Roller Splat was a project where I felt like I was able to combine all that I had learned both about designing and developing these games. With this project I felt like I was able to truly innovate in the hyper-casual market. Even the staff at Voodoo admitted they never expected a hyper-casual / puzzle game could work!
                      </p>
                      <div class="row">
                         <div class="col-lg-6 mx-auto">
@@ -361,9 +361,9 @@
                      <br>
                      <!--<hr class="star-dark mb-5">-->
                      <iframe width="560" height="315" src="https://www.youtube.com/embed/7KelFqYwW7o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                     <p class="mb-5">Developing Hyper-Casual games at Neon Play is usually a solo endeavour however, for this project I was created this project with another developer and during the peak of the projects development, eventually the entire art team was also Involved!</p>
-                      <p class="mb-5">My co-developer for this project was the very same person that when I first started working at Neon Play, that I would annoy with all of my dumb questions whether they were programming related or even about how to build a game to an iPhone as got to grips with my first mobile devlopment job!</p>
-                      <p>For the project we split the tasks in half with my self worrying about the "mini-game" and them the "meta-game". So in short I was responsible for the player interaction, ball physics and infinitely loading environment. I also undertook the task of managing the in-game economy and difficulty balancing.</p>
+                     <p class="mb-5">Developing Hyper-Casual games at Neon Play is usually a solo endeavour however, for this project I created this project with another developer and during the peak of the it's development, eventually the entire art team was also Involved!</p>
+                      <p class="mb-5">My co-developer for this project was the very same person that when I first started working at Neon Play, that I would annoy with all of my dumb questions whether they were programming related or even about how to build a game to an iPhone as got to grips with my first mobile development job!</p>
+                      <p>For the project we split the tasks in half with myself worrying about the "mini-game" and them the "meta-game". So in short, I was responsible for the player interaction, ball physics and infinitely loading environment. I also undertook the task of managing the in-game economy and difficulty balancing.</p>
                      <p class="mb-5"></p>
                      <div class="row">
                         <div class="col-lg-6 mx-auto">
@@ -403,7 +403,7 @@
                       <iframe width="560" height="315" src="https://www.youtube.com/embed/zKnx-4rx8Fc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                      <!--<hr class="star-dark mb-5">-->
                      <p class="mb-5">This is another game that was born out of an 8 hour long games jam at Neon Play. For this game I worked alongside an artist to both design and create the game</p>
-                     <p class="mb-5">For us a big part of the project became about adding a lot of character to the player avatar (something rarely seen in the market) to reflect his current situation wether he be safe, sneaking or in danger. Working alongside an artist for this project throughout its life time, I feel was incredibly valuable as it was a constantly creative environment as we bounced ideas of each other throughout.</p>
+                     <p class="mb-5">For us a big part of the project became about adding a lot of character to the player avatar (something rarely seen in the market) to reflect his current situation whether he be safe, sneaking or in danger. Working alongside an artist for this project throughout its lifetime, I feel was incredibly valuable as it was a constantly creative environment as we bounced ideas off each other throughout.</p>
                      <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                      <i class="fa fa-close"></i>
                      Close Project</a>
@@ -425,7 +425,7 @@
                      <br>
                      <!--<hr class="star-dark mb-5">-->
                      <iframe width="560" height="315" src="https://www.youtube.com/embed/LWHxzWWD1bg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                     <p class="mb-5">This is the very first hyper-casual game I created at Neon Play. This was where I first got to grips with a lot of both programming principles and market knowledge necessary for hyper-casual games. Working alongside the same artist that was mentioned in the Fright Light post, even to this day I am very happy with both the look and feel of the game</p>
+                     <p class="mb-5">This is the very first hyper-casual game I created at Neon Play. This was where I first got to grips with a lot of both programming principles and market knowledge necessary for hyper-casual games. Working alongside the same artist that was mentioned in the Fright Light post, even to this day I am very happy with both the look and feel of the game.</p>
                       <p class="mb-5"></p>
                      <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                      <i class="fa fa-close"></i>
@@ -449,7 +449,7 @@
                      <!--<hr class="star-dark mb-5">-->
                      <iframe width="560" height="315" src="https://www.youtube.com/embed/UkcoerP0lks" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                       <br>
-                      <p class="mb-5" align="left">Festival thrashers is a game that both myself and a handful of others created as a part of our final year project. As one of two programmers I was responsible for both the minigame and player behaviours scripting along with other responsabilities such as UI and camera animations.
+                      <p class="mb-5" align="left">Festival thrashers is a game that both myself and a handful of others created as a part of our final year project. As one of two programmers I was responsible for both the minigame and player behaviours scripting along with other responsibilities such as UI and camera animations.
                      </p>
                      <p class="mb-5" align="left">
                      </p>
@@ -486,8 +486,8 @@
                      <br>
                      <!--<hr class="star-dark mb-5">-->
                      <iframe width="560" height="315" src="https://www.youtube.com/embed/i7lYHkOq8_c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                     <p class="mb-5">This project was completed at Brains Eden during a 48 hour long games jam. Given the theme of "give and take" (pun absolutley intended) we quickly decided upon the concept of two characters navigating their way through puzzles connected via a bungee-cord where they would both "give and take" slack of the rope to naviagte obstacles and solve puzzles. </p>
-                      <p>In our small team of University of Gloucestershire students. I was responsible for the tasks of both scripting the player movement and puzzles featured in the level. I also handled a lot of the team cordination through git as most of our team did not have prior expierence with git version control</p>
+                     <p class="mb-5">This project was completed at Brains Eden during a 48 hour long games jam. Given the theme of "give and take" (pun absolutely intended) we quickly decided upon the concept of two characters navigating their way through puzzles connected via a bungee-cord where they would both "give and take" slack of the rope to navigate obstacles and solve puzzles. </p>
+                      <p>In our small team of University of Gloucestershire students. I was responsible for the tasks of both scripting the player movement and puzzles featured in the level. I also handled a lot of the team coordinating through git as most of our team did not have prior experience with git version control.</p>
                      <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                      <i class="fa fa-close"></i>
                      Close Project</a>
