changing text style in each portfolio

--- a/index.html
+++ b/index.html
@@ -361,9 +361,9 @@
                      <br>
                      <!--<hr class="star-dark mb-5">-->
                      <iframe width="560" height="315" src="https://www.youtube.com/embed/7KelFqYwW7o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                     <p class="mb-5">Developing Hyper-Casual games at Neon Play is usually a solo endeavour however, for this project I created this project with another developer and during the peak of the it's development, eventually the entire art team was also Involved!</p>
-                      <p class="mb-5">My co-developer for this project was the very same person that when I first started working at Neon Play, that I would annoy with all of my dumb questions whether they were programming related or even about how to build a game to an iPhone as got to grips with my first mobile development job!</p>
-                      <p>For the project we split the tasks in half with myself worrying about the "mini-game" and them the "meta-game". So in short, I was responsible for the player interaction, ball physics and infinitely loading environment. I also undertook the task of managing the in-game economy and difficulty balancing.</p>
+                     <p class="mb-5" align="left">Developing Hyper-Casual games at Neon Play is usually a solo endeavour however, for this project I created this project with another developer and during the peak of the it's development, eventually the entire art team was also Involved!</p>
+                      <p class="mb-5" align="left">My co-developer for this project was the very same person that when I first started working at Neon Play, that I would annoy with all of my dumb questions whether they were programming related or even about how to build a game to an iPhone as got to grips with my first mobile development job!</p>
+                      <p class="mb-5" align="left">For the project we split the tasks in half with myself worrying about the "mini-game" and them the "meta-game". So in short, I was responsible for the player interaction, ball physics and infinitely loading environment. I also undertook the task of managing the in-game economy and difficulty balancing.</p>
                      <p class="mb-5"></p>
                      <div class="row">
                         <div class="col-lg-6 mx-auto">
@@ -402,8 +402,8 @@
                      <br>
                       <iframe width="560" height="315" src="https://www.youtube.com/embed/zKnx-4rx8Fc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                      <!--<hr class="star-dark mb-5">-->
-                     <p class="mb-5">This is another game that was born out of an 8 hour long games jam at Neon Play. For this game I worked alongside an artist to both design and create the game</p>
-                     <p class="mb-5">For us a big part of the project became about adding a lot of character to the player avatar (something rarely seen in the market) to reflect his current situation whether he be safe, sneaking or in danger. Working alongside an artist for this project throughout its lifetime, I feel was incredibly valuable as it was a constantly creative environment as we bounced ideas off each other throughout.</p>
+                     <p class="mb-5" align="left">This is another game that was born out of an 8 hour long games jam at Neon Play. For this game I worked alongside an artist to both design and create the game</p>
+                     <p class="mb-5" align="left">For us a big part of the project became about adding a lot of character to the player avatar (something rarely seen in the market) to reflect his current situation whether he be safe, sneaking or in danger. Working alongside an artist for this project throughout its lifetime, I feel was incredibly valuable as it was a constantly creative environment as we bounced ideas off each other throughout.</p>
                      <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                      <i class="fa fa-close"></i>
                      Close Project</a>
@@ -425,7 +425,7 @@
                      <br>
                      <!--<hr class="star-dark mb-5">-->
                      <iframe width="560" height="315" src="https://www.youtube.com/embed/LWHxzWWD1bg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                     <p class="mb-5">This is the very first hyper-casual game I created at Neon Play. This was where I first got to grips with a lot of both programming principles and market knowledge necessary for hyper-casual games. Working alongside the same artist that was mentioned in the Fright Light post, even to this day I am very happy with both the look and feel of the game.</p>
+                     <p class="mb-5" align="left">This is the very first hyper-casual game I created at Neon Play. This was where I first got to grips with a lot of both programming principles and market knowledge necessary for hyper-casual games. Working alongside the same artist that was mentioned in the Fright Light post, even to this day I am very happy with both the look and feel of the game.</p>
                       <p class="mb-5"></p>
                      <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                      <i class="fa fa-close"></i>
@@ -450,8 +450,6 @@
                      <iframe width="560" height="315" src="https://www.youtube.com/embed/UkcoerP0lks" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                       <br>
                       <p class="mb-5" align="left">Festival thrashers is a game that both myself and a handful of others created as a part of our final year project. As one of two programmers I was responsible for both the minigame and player behaviours scripting along with other responsibilities such as UI and camera animations.
-                     </p>
-                     <p class="mb-5" align="left">
                      </p>
                     <p class="mb-5" align="left">Please feel free to check out all of the wonderfull people who worked on this project!
                      </p>
@@ -486,8 +484,8 @@
                      <br>
                      <!--<hr class="star-dark mb-5">-->
                      <iframe width="560" height="315" src="https://www.youtube.com/embed/i7lYHkOq8_c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                     <p class="mb-5">This project was completed at Brains Eden during a 48 hour long games jam. Given the theme of "give and take" (pun absolutely intended) we quickly decided upon the concept of two characters navigating their way through puzzles connected via a bungee-cord where they would both "give and take" slack of the rope to navigate obstacles and solve puzzles. </p>
-                      <p>In our small team of University of Gloucestershire students. I was responsible for the tasks of both scripting the player movement and puzzles featured in the level. I also handled a lot of the team coordinating through git as most of our team did not have prior experience with git version control.</p>
+                     <p class="mb-5" align="left">This project was completed at Brains Eden during a 48 hour long games jam. Given the theme of "give and take" (pun absolutely intended) we quickly decided upon the concept of two characters navigating their way through puzzles connected via a bungee-cord where they would both "give and take" slack of the rope to navigate obstacles and solve puzzles. </p>
+                      <p class="mb-5" align="left">In our small team of University of Gloucestershire students. I was responsible for the tasks of both scripting the player movement and puzzles featured in the level. I also handled a lot of the team coordinating through git as most of our team did not have prior experience with git version control.</p>
                      <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                      <i class="fa fa-close"></i>
                      Close Project</a>
